--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>fun.magmarealms</groupId>
   <artifactId>MagmaCore</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.1-beta</version>
   <packaging>jar</packaging>
 
   <name>MagmaCore</name>
